MIN-109 create navbar

--- a/client/src/sass/elements/_navbar.scss
+++ b/client/src/sass/elements/_navbar.scss
@@ -5,78 +5,53 @@
     top: 0;
     left: 0;
     width: 100%;
-    min-height: 8rem;
-    height: 12vh;
     box-shadow: 0 2px 10px rgba(40,75,124,.08);
-    background-color: $grey-header;
     display: flex;
-    justify-content: center;
     align-items: center;
-    z-index: 100;
+    justify-content: space-around;
+    background-color: #fff;
+    min-height: 6.5rem;
+    padding: 0 10rem;
 
-    h1 {
-        font-family: 'Lato';
-        color: white;
-        color: $grey-black;
-        font-weight: 400;
-        margin: auto;
-        transition: all .5s;
-        font-size: 4rem !important;
-        line-height: .8;
-        transform: translateY(10%);
+    // Logo image and text
+    &__logo {
+        display: flex;
+
+        img {
+            height: 50px;
+            margin-right: 7px;
+        }
+
+        h1 {
+            position: relative;
+            font-family: 'Lato';
+            color: white;
+            color: $grey-black;
+            font-weight: 400;
+            margin: auto;
+            transition: all .5s;
+            font-size: 3rem !important;
+            vertical-align: middle;
+            line-height: 0;
+            transform: translateY(10%);
+        }
     }
 }
 
-// Hamburger
-.hamburger {
-    z-index: 1000;
-    position: absolute;
-    right: 12%;
-    top: 35%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    &-line {
-        width: 3rem;
-        height: 2px;
-        background-color: white;
-        background-color: $grey-black;
-        margin: 3px;
-        border-radius: 1.5rem;
-    }
-}
 
 // Navigation
 .nav {
-    display: none;
-    justify-self: right;
-    justify-content: center;
+    display: flex;
     align-items: center;
-    width: 45rem;
-    text-align: right;
-    padding: 0 3rem;
+    justify-content: space-between;
+    width: 100%;
 
-    &-link {
+    &__link {
         color: $grey-black;
-        margin-left: 4rem;
         font-size: 1.7rem;
-
-        &--user {
-            margin-left: 0;
-        }
-
-        &--signin {
-            position: absolute;
-            right: 10rem;
-        }
-    }
-
-    img {
-        position: relative;
-        height: 5rem;
-        margin-left: 4.5rem;
-        top: -5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .fa-sign-in-alt, .fa-user-plus {
@@ -87,93 +62,23 @@
 
     .fa-sign-in-alt {
         font-size: 2.2rem;
-    }
-    
-}
-
-// Dictionary search
-.dictionary-searchbar {
-    display: none;
-    width: 45rem;
-
-    form {
-        input[type="text"] {
-            border: 1px #DAD8DB solid;
-            box-shadow: none;
-        }
-    }
-
-}  
-
-
-// Logout
-.logout {
-    display: none;
-    position: absolute;
-    transform: translateX(-4.5rem);
-    margin-top: 2rem;
-    color: $grey-black;
-    border: gainsboro 1px solid;
-    border-radius: 5px;
-    padding: 1rem 2rem;
-    background-color: white;
-    box-shadow:0 0px 7px rgba(40,75,124,.15);
-
-    &:hover {
-        font-weight: bold;
-        cursor: pointer;
-    }
-}
-
-.show-logout {
-    display: block;
-}
-
-// Mobile Drawer
-.drawer {
-    z-index: 500;
-    padding: 2rem 3rem;
-    position: absolute;
-    top: 8rem;
-
-    transform: translateX(100%);
-    height: calc(100vh - 8rem);
-    right: 0;
-    background-color: white;
-    border-left: 1px gainsboro solid;
-    width: 60%;
-    transition: all .5s;
-}
-
-.show-drawer {
-    transform: translateX(0%);
+    } 
 }
 
 
 /* ==========================================
-    Desktop
+    Mobile
 ========================================== */
 
-@media only screen and (min-width : $desktop) {
-    
-    .hamburger {
-        display: none;
-    }
-
-    .nav, .dictionary-searchbar {
-        display: flex;
-    }
+@media only screen and (max-width : $mobile) {
 
     .header {
-        background-color: #fff;
-        justify-content: space-around;
-        min-height: 8rem;
+        justify-content: center;
+        padding-left: 1rem;
+        padding-right: 2rem;
 
-        h1 {
-            font-size: 4rem;
-            position: relative;
+        .nav {
+            justify-content: center;
         }
     }
-
-    
 }
