--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -16,4 +16,5 @@
 @import "sass/elements/alert";
 @import "sass/elements/spinner";
 @import "sass/elements/searchbar";
+@import "sass/elements/dropdown";
 
