--- a/client/src/sass/base/_helpers.scss
+++ b/client/src/sass/base/_helpers.scss
@@ -15,22 +15,18 @@
     display: none;
 }
 
-.hide-mobile {
-    display: none;
-}
-
 .pos-relative {
     position: relative;
 }
 
+.hide-desktop {
+    display: none;
+}
 
 
-@media only screen and (min-width : $desktop) { 
+
+@media only screen and (max-width : $mobile) { 
     .hide-mobile {
-        display: block;
-      }
-    
-    .hide-desktop {
-        display: none;
+        display: none !important;
     }
 }
