--- a/client/src/sass/elements/_dropdown.scss
+++ b/client/src/sass/elements/_dropdown.scss
@@ -26,7 +26,7 @@
 .dropdown-menu {
     position: absolute;
     top: 100%;
-    left: 0;
+    right: 0;
     z-index: 100;
     display: none;
     min-width: 7rem;
