--- a/client/src/sass/base/_layout.scss
+++ b/client/src/sass/base/_layout.scss
@@ -1,4 +1,3 @@
-
 /* ===================================
    Container
 ==================================== */
@@ -58,18 +57,31 @@
             font-weight: 600;
         }
 
-        &:not(.sidebar__link--active):hover, &:not(.sidebar__link--active):hover span svg {
+
+        &:hover,
+        &:hover>span svg {
             fill: $secondary;
             color: $secondary;
         }
+    }
 
-        
+    &__btn {
+        margin-top: 10px;
+
+        p {
+            margin-left: 2px;
+            font-weight: 700;
+        }
+
+        &:hover {
+            background-color: #f1f1f1;
+        }
     }
 }
 
 
-@media only screen and (max-width : $breakpoint-lg) { 
-    
+@media only screen and (max-width : $breakpoint-lg) {
+
     // Stretch everything in main
     .main section .row .col-1,
     .main section .row .col-2,
@@ -87,7 +99,7 @@
     }
 }
 
-@media only screen and (max-width : $breakpoint-md) { 
+@media only screen and (max-width : $breakpoint-md) {
     .main {
         margin: 0rem auto;
         padding: 35px;
@@ -99,7 +111,7 @@
     }
 }
 
- @media only screen and (max-width: $breakpoint-sm) { 
+@media only screen and (max-width: $breakpoint-sm) {
     .main {
         padding: 25px;
     }
