--- a/client/src/sass/elements/_button.scss
+++ b/client/src/sass/elements/_button.scss
@@ -95,3 +95,24 @@
     }
 }
 
+/* ===================================
+   Round button
+==================================== */
+.btn-round {
+    font-size: 15px;
+    line-height: 18px;
+    border-radius: 100px;
+    cursor: pointer;
+    text-align: center;
+    width: auto;
+    transition: background-color .25s ease;
+    padding: 9px 24px;
+    background-color: #fff;
+    color: #111;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.12);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
