--- a/client/src/sass/base/_helpers.scss
+++ b/client/src/sass/base/_helpers.scss
@@ -1,15 +1,7 @@
-.hard-radius {
-    border-radius: 7px !important;
-}
-
-.medium-radius {
-    border-radius: 6px !important;
-}
-
-.soft-radius {
-    border-radius: 2rem !important;
-}
-
+// Center all ionicons
+span.sc-bczRLJ {
+    display: flex;
+} 
 
 .hidden {
     display: none;
