MIN-123 create mobile bottom tabs

--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -17,4 +17,5 @@
 @import "sass/elements/spinner";
 @import "sass/elements/searchbar";
 @import "sass/elements/dropdown";
+@import "sass/elements/bottomNav";
 
